# qp_evaluation

./: pyproject.toml
evaluation/: dataset_utils.py  feature_extractor.py  trainer.py  utils.py
evaluation/algorithms/bao/: featurize.py
experiments/: cost_estimation.py  index_selection.py  query_optimizer.py
