[tool.poetry]
name = "qp_evaluation"
version = "0.1.0"
description = ""
authors = ["sclai <pallasjack@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.11.0"
numpy = "<2.0.1"
scipy = "<1.14.1"
scikit-learn = "<1.5.1"
pandas = "<1.3.5"
dgl = "<2.2.1"
pyparsing = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
